// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render FoodForm correctly 1`] = `
<div>
  <p>
    Please Select a Food Category First
  </p>
  <form
    onSubmit={[Function]}
  >
    <button
      onClick={[Function]}
      type="button"
    >
       Select Category
    </button>
    <input
      disabled={true}
      id="selectedCat"
      required={true}
      type="text"
      value=""
    />
    <input
      disabled={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <input
      disabled={true}
      max="2000"
      min="0"
      onChange={[Function]}
      step="10"
      type="range"
      value=""
    />
    <input
      disabled={true}
      id="textInput"
      type="text"
      value=""
    />
    <div>
      Is Full postion available::::::
      <input
        checked={false}
        onChange={[Function]}
        type="radio"
        value={true}
      />
       Yes
      <input
        checked={true}
        onChange={[Function]}
        type="radio"
        value={false}
      />
       No
    </div>
    <div
      hidden={true}
    >
      Set the size of the potion:::::
      <input
        checked={true}
        onChange={[Function]}
        type="radio"
        value="regular"
      />
       Normal
      <input
        checked={false}
        onChange={[Function]}
        type="radio"
        value="full"
      />
       Full
    </div>
    <CategoryModal
      handleCategory={[Function]}
      handleCloseModal={[Function]}
      modalIsOpen={false}
    />
    <textarea
      disabled={true}
      onChange={[Function]}
      placeholder="Add a description about this food"
      value=""
    />
    <button>
      Add Food
    </button>
  </form>
</div>
`;

exports[`should render FoodForm correctly with food date 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <button
      onClick={[Function]}
      type="button"
    >
       Select Category
    </button>
    <input
      disabled={true}
      id="selectedCat"
      required={true}
      type="text"
      value="Fried Rice"
    />
    <input
      disabled={false}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value="Chicken Fried Rice"
    />
    <input
      disabled={false}
      max="2000"
      min="0"
      onChange={[Function]}
      step="10"
      type="range"
      value="350"
    />
    <input
      disabled={true}
      id="textInput"
      type="text"
      value="350"
    />
    <div>
      Is Full postion available::::::
      <input
        checked={true}
        onChange={[Function]}
        type="radio"
        value={true}
      />
       Yes
      <input
        checked={false}
        onChange={[Function]}
        type="radio"
        value={false}
      />
       No
    </div>
    <div
      hidden={false}
    >
      Set the size of the potion:::::
      <input
        checked={true}
        onChange={[Function]}
        type="radio"
        value="regular"
      />
       Normal
      <input
        checked={false}
        onChange={[Function]}
        type="radio"
        value="full"
      />
       Full
    </div>
    <CategoryModal
      handleCategory={[Function]}
      handleCloseModal={[Function]}
      modalIsOpen={false}
    />
    <textarea
      disabled={false}
      onChange={[Function]}
      placeholder="Add a description about this food"
      value=""
    />
    <button>
      Add Food
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 1`] = `
<div>
  <p>
    Please Select a Food Category First
  </p>
  <form
    onSubmit={[Function]}
  >
    <button
      onClick={[Function]}
      type="button"
    >
       Select Category
    </button>
    <input
      disabled={true}
      id="selectedCat"
      required={true}
      type="text"
      value=""
    />
    <input
      disabled={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <input
      disabled={true}
      max="2000"
      min="0"
      onChange={[Function]}
      step="10"
      type="range"
      value=""
    />
    <input
      disabled={true}
      id="textInput"
      type="text"
      value=""
    />
    <div>
      Is Full postion available::::::
      <input
        checked={false}
        onChange={[Function]}
        type="radio"
        value={true}
      />
       Yes
      <input
        checked={true}
        onChange={[Function]}
        type="radio"
        value={false}
      />
       No
    </div>
    <div
      hidden={true}
    >
      Set the size of the potion:::::
      <input
        checked={true}
        onChange={[Function]}
        type="radio"
        value="regular"
      />
       Normal
      <input
        checked={false}
        onChange={[Function]}
        type="radio"
        value="full"
      />
       Full
    </div>
    <CategoryModal
      handleCategory={[Function]}
      handleCloseModal={[Function]}
      modalIsOpen={false}
    />
    <textarea
      disabled={true}
      onChange={[Function]}
      placeholder="Add a description about this food"
      value=""
    />
    <button>
      Add Food
    </button>
  </form>
</div>
`;

exports[`should render error for invalid form submission 2`] = `
<div>
  <p>
    Please Select a Food Category First
  </p>
  <p>
    The field such as NAME, CATEGORY, FULL_AVAILABILITY and FOODSIZE are mandatoroy to fill
  </p>
  <form
    onSubmit={[Function]}
  >
    <button
      onClick={[Function]}
      type="button"
    >
       Select Category
    </button>
    <input
      disabled={true}
      id="selectedCat"
      required={true}
      type="text"
      value=""
    />
    <input
      disabled={true}
      onChange={[Function]}
      placeholder="Name"
      type="text"
      value=""
    />
    <input
      disabled={true}
      max="2000"
      min="0"
      onChange={[Function]}
      step="10"
      type="range"
      value=""
    />
    <input
      disabled={true}
      id="textInput"
      type="text"
      value=""
    />
    <div>
      Is Full postion available::::::
      <input
        checked={false}
        onChange={[Function]}
        type="radio"
        value={true}
      />
       Yes
      <input
        checked={true}
        onChange={[Function]}
        type="radio"
        value={false}
      />
       No
    </div>
    <div
      hidden={true}
    >
      Set the size of the potion:::::
      <input
        checked={true}
        onChange={[Function]}
        type="radio"
        value="regular"
      />
       Normal
      <input
        checked={false}
        onChange={[Function]}
        type="radio"
        value="full"
      />
       Full
    </div>
    <CategoryModal
      handleCategory={[Function]}
      handleCloseModal={[Function]}
      modalIsOpen={false}
    />
    <textarea
      disabled={true}
      onChange={[Function]}
      placeholder="Add a description about this food"
      value=""
    />
    <button>
      Add Food
    </button>
  </form>
</div>
`;
